re #784 - fixed spacing above news

--- a/application/site/public/theme/muhimu/css/default.scss
+++ b/application/site/public/theme/muhimu/css/default.scss
@@ -381,6 +381,10 @@ img {
 
 .container__news {
   @extend %clearfix;
+
+  @include respond-min($breakpoint-charlie) {
+    padding-top: 20px;
+  }
 }
 
 .news__featured {
