--- a/application/site/public/theme/muhimu/css/ie.css
+++ b/application/site/public/theme/muhimu/css/ie.css
@@ -979,6 +979,9 @@ img {
 /* ==========================================================================
    News
    ========================================================================== */
+.container__news {
+  padding-top: 20px; }
+
 .news__featured {
   padding-top: 10px;
   padding-bottom: 10px;
